--- a/hello_world/collector.yaml
+++ b/hello_world/collector.yaml
@@ -23,3 +23,6 @@ service:
     metrics:
       receivers: [otlp]
       exporters: [otlphttp]
+    logs:
+      receivers: [otlp]
+      exporters: [otlphttp]
