--- a/hello_world/requirements.txt
+++ b/hello_world/requirements.txt
@@ -7,6 +7,7 @@ opentelemetry-exporter-otlp-proto-http==1.38.0
 opentelemetry-instrumentation==0.59b0
 opentelemetry-instrumentation-aws-lambda==0.59b0
 opentelemetry-instrumentation-botocore==0.59b0
+opentelemetry-instrumentation-logging==0.59b0
 opentelemetry-propagator-aws-xray==1.0.2
 opentelemetry-proto==1.38.0
 opentelemetry-sdk==1.38.0
