--- a/template.yaml
+++ b/template.yaml
@@ -26,13 +26,16 @@ Resources:
         Variables:
           AWS_LAMBDA_EXEC_WRAPPER: /opt/otel-instrument
           OPENTELEMETRY_COLLECTOR_CONFIG_URI: /opt/collector.yaml
-          OTEL_GATEWAY_ENDPOINT: "http://10.0.18.131:4318"
+          OTEL_GATEWAY_ENDPOINT: "http://52.91.30.252:4318"
           OTEL_GATEWAY_PROTOCOL: "http/protobuf"
           OTEL_TRACES_EXPORTER: "console, otlp"
           OTEL_SERVICE_NAME: "aws-lambda-python-opentelemetry-example"
           OTEL_RESOURCE_ATTRIBUTES: "deployment.environment=staging"
-          OTEL_LOG_LEVEL: "DEBUG"
+          OTEL_LOG_LEVEL: "INFO"
           OTEL_PROPAGATORS: "tracecontext,baggage"
+          OTEL_PYTHON_LOG_CORRELATION: "true"
+          OTEL_PYTHON_LOGGING_AUTO_INSTRUMENTATION_ENABLED: "true"
+          OTEL_PYTHON_LOG_FORMAT: "%(asctime)s %(levelname)s [%(name)s] [%(filename)s:%(lineno)d] [trace_id=%(otelTraceID)s span_id=%(otelSpanID)s service.name=%(otelServiceName)s] - %(message)s"
           SPLUNK_ACCESS_TOKEN: "BOPmiclPnL3GeyhSLUK2kQ"
           SPLUNK_REALM: "us1"
     Metadata:
